# image-data-registry-dvc

./: .gitignore  README.md  pyproject.toml
.dvc/: config
processed/01_image_dataset/: README.md  dvc.yaml  params.yaml
processed/01_image_dataset/data/inputs/: .gitignore  01_data_collection_16_oct_2021.dvc  02_data_collection_20_oct_2021.dvc
processed/01_image_dataset/data/outputs/day_images/: .gitignore
processed/01_image_dataset/src/: classify_day_night_and_foggy_images.py  remove_corrupted_images.py  remove_dark_and_bright_images.py  utils.py
raw/: .gitignore  01_data_collection_16_oct_2021.dvc  02_data_collection_20_oct_2021.dvc
